@@ -103,7 +103,7 @@ module RDoc
   ##
   # RDoc version you are using
 
-  VERSION = '3.5.3'
+  VERSION = '3.6'
 
   ##
   # Method visibilities
