@@ -7,6 +7,8 @@
 * Bug fixes
   * Remove windows-specific test for test_check_files, it is too hard to do.
     Ruby commit r30811 by Usaku Nakamura.
+  * Remove unnecessary (and wrong) platform-dependent hacks.  Ruby commit
+    r30829 by Usaku Nakamura.
 
 === 3.5.3 / 2010-02-06
 
